# itercmp

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html
src/itercmp/dunder/: __init__.py
tests/: test_dunder_le.py
