[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
description = "This project accesses a given TOML file."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "itercmp"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.0.0.dev0"

[project.urls]
Download = "https://pypi.org/project/itercmp/#files"
Index = "https://pypi.org/project/itercmp/"
Source = "https://github.com/johannes-programming/itercmp/"
Website = "https://itercmp.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
